--- a/branch.html
+++ b/branch.html
@@ -5,8 +5,11 @@
         </head>
 <body>
 <h1>Branches in git & github</h1>
-
-
+<h2>Branches in git & github</h2>
+<h3>Branches in git & github</h3>
+<h4>Branches in git & github</h4>
+<h5>Branches in git & github</h5>
+<h6>Branches in git & github</h6>
 
 
 
