--- a/branch.html
+++ b/branch.html
@@ -6,7 +6,11 @@
 <body>
 <h1>Branches in git & github</h1>
 <div class="footer">
-    
+    <div class="logo">
+        <div class="container">
+            <h2>About us</h2>
+        </div>
+    </div>
 </div>
 
 
