--- a/branch.html
+++ b/branch.html
@@ -9,6 +9,8 @@
     <div class="logo">
         <div class="container">
             <h2>About us</h2>
+            <li>Contact</li>
+            <li>Feedback</li>
         </div>
     </div>
 </div>
